package org.teamtree.objectaid;

public interface Accessibilite {
    public String getAcces();
}
