package org.teamtree.objectaid;

public class Default implements Accessibilite {

    @Override
    public String getAcces() {
        return "";
    }
}
