package org.teamtree.objectaid;

public interface Entite {
    public String getEntite();
}
