package org.teamtree.objectaid.Entite;

public class Classe implements Entite{
    @Override
    public String getEntite() {
        return "class";
    }
}
