package org.teamtree.objectaid.Entite;

public class Interface implements Entite{
    @Override
    public String getEntite() {
        return "interface";
    }
}
