package org.teamtree.objectaid.Etat;

import javafx.scene.control.Label;

public class Abstract implements Etat{
    @Override
    public String getEtat(){
        return "abstract";
    }
}
