package org.teamtree.objectaid;

public class Private implements Accessibilite {
    @Override
    public String getAcces() {
        return "-";
    }
}
